src/test/deca/etapeA/valid/lex_include.deca
// Description:
//    test du lexeur pour les inclusions
//
// Resultats:
// ok

#include "string"
#include        "toto"
#include "12ab_toto.exten-sion"


