src/test/deca/etapeA/invalid/lex_include/lex_include_7.deca
// Description:
//  test du lexeur pour les inclusions
//  Nom de fichier invalide
// Resultats:
// erreur syntaxique
// Ligne <8> : <syntaxError>

#include "&"
